src/objects/Marketing_Cloud_Connection__mdt.object
<CustomObject>
    <description>Marketing Cloud API Connection Information</description>
    <fields>
        <fullName>AT_CH_API_Subdomain__c</fullName>
        <label>AT CH API Subdomain</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_CH_Client_Id__c</fullName>
        <label>AT CH Client Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_CH_Client_Secret__c</fullName>
        <label>AT CH Client Secret</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_CH_List_DoubleOptIn__c</fullName>
        <label>AT CH List DoubleOptIn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_API_Subdomain__c</fullName>
        <label>CA API Subdomain</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Client_Id__c</fullName>
        <label>CA Client Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Client_Secret__c</fullName>
        <label>CA Client Secret</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_List_DoubleOptIn__c</fullName>
        <label>CA List DoubleOptIn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_API_Subdomain__c</fullName>
        <label>DE API Subdomain</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Client_Id__c</fullName>
        <label>DE Client Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Client_Secret__c</fullName>
        <label>DE Client Secret</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_List_DoubleOptIn__c</fullName>
        <label>DE List DoubleOptIn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GB_IE_API_Subdomain__c</fullName>
        <label>GB IE API Subdomain</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GB_IE_Client_Id__c</fullName>
        <label>GB IE Client Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GB_IE_Client_Secret__c</fullName>
        <label>GB IE Client Secret</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GB_IE_List_DoubleOptIn__c</fullName>
        <label>GB IE List DoubleOptIn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Marketing Cloud Connection</label>
    <pluralLabel>Marketing Cloud Connections</pluralLabel>
</CustomObject>